tests/type/good/string-operations.py
test = "foo" + "bar"
other = test + test
