tests/type/bad/string-int2.py
test = "test"
other = 1
result = test + other
